Maps and scanqr fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,29 @@
     <string name="preference">با پیشرفت کسب و کارهای اینترنتی در دهه اخیر، فرآیند خرید اینترنتی انواع بیمه نامه برای ما آسان شد و دیگر نیازی به مراجعه حضوری به دفاتر نمایندگی بیمه و پرکردن فرم های متعدد و انتظار در صف های طولانی و صرف وقت، صرفا در روزهای غیر تعطیل و کاری نمی باشد و ما میتوانیم در کمتر از 5 دقیقه هر نوع بیمه ای از جمله شخص ثالث، بدنه را خریداری کنیم. و همچنین با توجه به افزایش تعداد خودرو ها و تمایل افراد به داشتن اتومبیل شخصی موجب تعدد سفرهای درون شهری و برون شهری شده است که در پی آن شاهد بالارفتن آمار تصادفات و وارد آمدن خسارت های مالی و جانی هستیم. حال سوالی که در این میان پیش می آید این است که با خرید بیمه نامه، جبران هزینه های سنگین این خسارات را میسر کردیم اما برای اعلام خسارت چه کاری باید انجام دهیم؟</string>
     <string name="whattodo">در جواب این سوال باید بگوییم که همانند خرید اینترنتی بیمه نامه، روند اعلام خسارت نیز برای شما آسان شده است و فقط کافیست که یک گوشی تلفن هوشمند در اختیار داشته باشید و در کمتر از 5 دقیقه، خسارت وارد شده را اعلام کنید تا ارزیابان خسارت بیمه مورد نظر شما، در کمترین زمان به سراغ شما آمده و خسارت را ارزیابی کنند.</string>
     <string name="howtodo">درهر زمان و هر کجا که دچار حادثه شدید، با استفاده از نرم افزار آیلاس که روی تلفن همراه خود نصب کرده اید، می توانید مکان و محل حادثه را روی نقشه انتخاب کرده و گزینه اعلام خسارت را انتخاب کنید. خسارت شما از این طریق به ارزیابان خسارت اعلام شده و نزدیک ترین ارزیاب به محل حادثه برای شما فرستاده خواهد شد. ارزیابان خسارت، میزان خسارت وارد شده به حادثه دیده گان را بررسی نموده و در سامانه اعلام خسارت آیلاس ثبت خواهند کرد و با این روند پرداخت خسارت برای شما آسان و تسریع می شود و دیگر نیازی به مراجعه حضوری به مراکز پرداخت خسارت نخواهید داشت. همچنین شما می توانید از طریق این اپلیکیشن خسارت خود را پیگیری نموده و یا از مراحل طی شده پرونده خسارت خود مطلع شوید.</string>
+    <string name="conspayment1">"ثابت 1
+شهر: تهران
+شماره تماس: 33914037
+آدرس:
+تهران - خ امير كبيراول خ سعدى جديد پاساژ نمونه اميركبير"</string>
+
+    <string name="conspayment2">"ثابت 2
+شهر: تهران
+شماره تماس: 29461003
+آدرس:
+تهران - سپهبدقرنى نرسيده به پل كريم خان نبش كوچه حقيقت طلب"</string>
+    <string name="mobilepayment2">"
+سیار 2
+شهر: تهران
+شماره تماس: 0218873660
+آدرس:
+تهران - تهران خيابان سهروردي شمالي – خيابان خرمشهر (آپادانا)
+ بين خيابان عشقيار و صابونچي – پلاك ۹۷"</string>
+    <string name="mobilepayment1">"
+سیار 1
+شهر: تهران
+شماره تماس: 88736078
+آدرس:
+تهران - تهران - سپهبدقرنى نرسيده به پل كريم خان نبش كوچه حقيقت طلب"</string>
+
 </resources>
