Fixed bugs, intents, added track report states

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,6 @@
 شماره تماس: 88736078
 آدرس:
 تهران - تهران - سپهبدقرنى نرسيده به پل كريم خان نبش كوچه حقيقت طلب"</string>
+    <string name="iloss">iloss</string>
 
 </resources>
